Implementation of preserveDrawingBuffer:Discard in software

DrawingBuffer::finishPrepareTextureMailboxSoftware was ignoring the
m_preserveDrawingBuffer setting, so this change adds a simple clear
operation to emulate that behavior in software. Related tests from
the WebGL Conformance Tests 1.0.4 test suite all pass. Tests are:

conformance/canvas/buffer-offscreen-test.html
conformance/canvas/buffer-preserve-test.html
conformance/context/context-attribute-preserve-drawing-buffer.html

BUG=709622
R=kbr@chromium.org

Review-Url: https://codereview.chromium.org/2799783008
Cr-Commit-Position: refs/heads/master@{#463132}

Former-commit-id: 154a93d5c03f1a483b644c1bca4dea60dabb7dad